--- a/atividade_2_ac1/src/main/resources/templates/funcionario.html
+++ b/atividade_2_ac1/src/main/resources/templates/funcionario.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h2>Cadastrar novos funcionarios</h2>
+    <form th:action="@{/cadastrar}" method="POST">
+        <input type="text" name="nome" placeholder="Nome">
+        <input type="text" name="funcao" placeholder="Função">
+        <input type="text" name="salario" placeholder="Salario">
+        <input type="text" name="anoAdmissao" placeholder="Ano de Admissão"> 
+        <input type="submit" value="Cadastrar">
+    </form>
     <br><br>
     <h2>Funcionarios Cadastrados</h2>
     <table>
